# embedded-patterns

./: .gitignore  README.md
rust/: README.md
rust/blinky/: Cargo.toml  flash.sh
rust/blinky/.cargo/: config.toml
rust/blinky/src/: .main.rs.swp  main.rs
rust/mb2-embassy/: Cargo.toml  comp-and-flash-one-arg.sh
rust/mb2-embassy/.cargo/: config.toml
rust/mb2-hello-world/: compile-and-flash-send-byte.sh
rust/mb2-snake-game/: Cargo.toml  cex-compile-example.sh  compile-sources.sh  y-dev-notes.md
rust/mb2-snake-game/src/: control.rs  display.rs  game.rs  main.rs
rust/mb2-uart/: Cargo.toml  Embed.toml  flash.sh  notes.txt
rust/mb2-uart/examples/: receive-byte.rs  rng-example.rs
rust/microbit-blinky/: Cargo.toml  compile-and-flash.sh
rust/microbit-blinky/src/: main.rs
