[package]
name = "mb2-snake-game"
version = "0.1.0"
authors = ["Alan Bunbury <dev@bunburya.eu>"]
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
heapless = "0.8.0"
microbit-v2 = "0.13.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"

[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm", "critical-section-single-core"]

# [dependencies.serial-setup]
# version = "0.1.0"
# path = "../serial-setup"
